fixed overflow of textarea (thx Claudiu)

--- a/front-end/styles/content_style.css
+++ b/front-end/styles/content_style.css
@@ -171,6 +171,8 @@ body{
 	box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.4);
 	transition: all 0.5s ease-in-out;
 	text-align:initial;
+	overflow-x:hidden;
+	overflow-wrap: break-word;
 }
 
 .editor-holder.fullscreen {
@@ -226,7 +228,7 @@ body{
 }
 
 .editor-holder textarea, .editor-holder code {
-	width: 100%;
+	width: 91%;
 	height: auto;
 	min-height: 450px;
 	font-size: 14px;
